# impostor-back

./: .dockerignore  Dockerfile  main.py  pyproject.toml
src/: app.py
src/core/: __init__.py  match.py  state.py  websocket.py
src/game/: __init__.py  phases.py  roles.py  voting.py
src/models/: __init__.py  requests.py
src/utils/: __init__.py  helpers.py
